# mamegrep

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
configs/: default.jsonc  sile.jsonc
src/: action.rs  app.rs  canvas.rs  git.rs  lib.rs  main.rs  terminal.rs  widget_command_editor.rs  widget_legend.rs  widget_search_result.rs
