[package]
name = "mamegrep"
version = "0.2.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "A TUI tool for `$ git grep` to easily edit search patterns and view results"
homepage = "https://github.com/sile/mamegrep"
repository = "https://github.com/sile/mamegrep"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
orfail = "1.1.0"
unicode-width = "0.2.0"
