[package]
name = "mamegrep"
version = "0.2.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Git grep TUI frontend"
homepage = "https://github.com/sile/mamegrep"
repository = "https://github.com/sile/mamegrep"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
noargs = "0.1.0"
orfail = "1.1.0"
unicode-width = "0.2.0"
