[package]
name = "mamegrep"
version = "0.2.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Git grep TUI frontend"
homepage = "https://github.com/sile/mamegrep"
repository = "https://github.com/sile/mamegrep"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
noargs = "0.3.1"
orfail = "1.1.0"
tuinix = "0.1.1"
unicode-width = "0.2.0"
